2002-08-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/**/Makefile*: removed. Now only define the files needed in
	the file Files. The root Makefile takes care of the rest.
	* gaphor/config.py.in: New file. configure time configuration stuff is
	put here.

2002-08-20  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/*: Added association and package item
	* Added several comments.
	* gaphor/misc/storage_minidom.py: works again
	* configure.in: Gaphor needs DiaCanvas2 0.8.0 (= current CVS version)

2002-07-04  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/tree: Directory removed, namespace.py is moved to gaphor/ui.
	* gaphor/command: moved to gaphor/ui.command
	* gaohor/UML/diagram.py: fixed bug in loading code.

2002-07-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/element.py: Fixed bug and changed load() to queue
	signals. Changed postload to flush the queue.
	* gaphor/command: New directory. Here command classes will be stored.
	Simple and more complex operations should be executed through
	commands.
	* *all files*: changed module paths to the project root. So now we
	should include gaphor.UML in stead of UML.

2002-07-02  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* doc/gaphor.dtd: Allow text data in Value tag.
	* gaphor/UML/element.py: Restructured get/set attr stuff. Now it is
	more readable and better usable for e.g. tree models.
	* gaphor/UML/element.py: Changed signal protocol. Now old and new
	values are also parameters.
	* gaphor/diagram/(relationship.py|diagramitem.py|dependency.py):
	new files.
	* gaphor/misc/signal.py: Added signal queueing options (queue(),
	flush())
	* gaphor/misc: Added parsers using both libxml2 or xml.dom.minidom.
	(work in progress).

2002-03-28  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/storage.py: Now use the standard Python XML stuff
	(with expat).
	* Various feature improvements and other nifty things...

2002-03-25  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
