@@ -1,34 +1,27 @@
 #!/usr/bin/env python
 
 #
-# GModeler main application
+# Gaphor main application
 #
 # vim:sw=4
 
 from misc.singleton import Singleton
-import gtk
-import gnome
-import gnome.ui
-import ui
+import config
 
 class Gaphor(Singleton):
     NAME='gaphor'
-    VERSION='0.1'
+    VERSION=config.GAPHOR_VERSION
     TITLE='Gaphor v' + VERSION
 
     def init(self):
-	#gnome.init(Gaphor.NAME, Gaphor.VERSION + 
-	self.app = gnome.ui.App(Gaphor.NAME, Gaphor.TITLE)
-	self.app_bar = gnome.ui.AppBar (0, 1, gnome.ui.USER)
-	self.app.set_menubar(self.app_bar)
-	#view = gnome.ui.MDIGenericChild('window1')
-	#self.app.add_view(view)
-	pass
+	import gnome
+	import ui
+	gnome.program_init(Gaphor.NAME, Gaphor.VERSION)
+	self.__mainwindow = ui.MainWindow(Gaphor.NAME, Gaphor.TITLE)
 
     def main(self):
+	import gtk
 	gtk.main()
 
-
-#app = Gaphor()
-#app.main()
-
+    def get_mainwindow(self):
+        return self.__mainwindow
