@@ -1,5 +1,5 @@
 
-__all__ = [ 'singleton', 'command', 'signal', 'storage' ]
+__all__ = [ 'singleton', 'command', 'signal', 'storage', 'menufactory' ]
 
 from gaphorerror import GaphorError
 
