@@ -1,4 +1,5 @@
 __all__ = [ 'command', 'namespace' ]
 from mainwindow import *
+from diagramwindow import *
 from diagramview import *
 from treeview import *
